--- a/index.html
+++ b/index.html
@@ -1,61 +1,50 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-    <title> University</title>
-    <link href="css/main.css">
-    <script src="js/libs/jquery.js"></script>
-</head>
-<body>
+    <head>
+        <title> University</title>
+        <link href="css/main.css">
+        <script src="js/libs/jquery.js"></script>
+    </head>
 
-    <div id="main-content">
-        <div id="sidebar-nav" class="sidebar">Blank</div>
-        <div id="content-panel" class="inner-content">Blank</div>
-    </div>
+    <body>
 
-    <script id="main-nav" language="text/template">
-
-        <div>
-            <h3>{{title}}</h3>
-            {{#each links}}
-                <a href="#{{@key}}" id="{{@key}}" class="menu-items">{{this}}</a>
-            {{/each}}
+        <div id="main-content">
+            <div id="sidebar-nav" class="sidebar">Blank</div>
+            <div id="content-panel" class="inner-content">Blank</div>
         </div>
-    </script>
-    <script id="content-default" language="text/template">
 
-        <div>
-            <b>Welcome {{firstname}} {{lastname}}!</b>
 
-        </div>
-    </script>
+        <!-- JS Start -->
 
-    <script id="main-nav-backup" language="text/template">
+        <script>
+            var app = {};
+            app.WebRoot = window.location.href;
+        </script>
 
-        <div>
+        <!-- Scripts -->
+        <script src="js/libs/underscore.js"></script>
+        <script src="js/libs/Backbone.js"></script>
+        <script src="js/libs/tether.js"></script>
+        <script src="js/libs/bootstrap.js"></script>
+        <script src="js/libs/handlebars-v4.0.5.js"></script>
 
-            <h3>{{title}}</h3>
+        <!-- Custom -->
+        <script src="js/custom-handlebars.js"></script>
+        <script src="js/backbone-view-factory.js"></script>
+        <script src="js/backbone-model-factory.js"></script>
+        <script src="js/backbone-model.js"></script>
+        <script src="js/backbone-collection.js"></script>
 
-            <ul>
-                {{#each links}}
-                    <li>
-                        <a href="#{{@key}}">
-                            <!--{{#uppercase}}{{this}}{{/uppercase}}-->
-                            {{this}}
-                        </a>
-                    </li>
-                {{/each}}
-            </ul>
+        <!-- Views -->
+        <script src="js/views/backbone-layout.js"></script>
+        <script src="js/views/backbone-module.js"></script>
 
-        </div>
-    </script>
+        <!-- Router -->
+        <script src="js/backbone-router.js"></script>
 
-    <script src="js/libs/underscore.js"></script>
-    <script src="js/libs/Backbone.js"></script>
-    <script src="js/libs/tether.js"></script>
-    <script src="js/libs/bootstrap.js"></script>
-    <script src="js/libs/handlebars-v4.0.5.js"></script>
-    <script src="js/main.js"></script>
+        <script src="js/main.js"></script>
 
-</body>
+
+    </body>
 </html>
