--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
     <head>
         <title> University</title>
-        <link href="css/main.css">
+
+        <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="css/main.css" rel="stylesheet" type="text/css">
         <script src="js/libs/jquery.js"></script>
+
     </head>
 
     <body>
+        <nav id="sidebar-nav"  class="navbar navbar-default navbar-fixed-bottom">
 
-        <div id="main-content">
-            <div id="sidebar-nav" class="sidebar">Blank</div>
+        </nav>
+        <div id="main-content" class="container">
+
             <div id="content-panel" class="inner-content">Blank</div>
         </div>
 
@@ -19,29 +23,35 @@
 
         <script>
             var app = {};
+            app.Title = "University";
             app.WebRoot = window.location.href;
         </script>
 
         <!-- Scripts -->
         <script src="js/libs/underscore.js"></script>
         <script src="js/libs/Backbone.js"></script>
+        <script src="js/libs/backbone-forms.js"></script>
         <script src="js/libs/tether.js"></script>
         <script src="js/libs/bootstrap.js"></script>
         <script src="js/libs/handlebars-v4.0.5.js"></script>
 
         <!-- Custom -->
         <script src="js/custom-handlebars.js"></script>
-        <script src="js/backbone-view-factory.js"></script>
-        <script src="js/backbone-model-factory.js"></script>
-        <script src="js/backbone-model.js"></script>
-        <script src="js/backbone-collection.js"></script>
+        <script src="js/views/backbone-view-factory.js"></script>
+        <script src="js/models/backbone-model-factory.js"></script>
+        <script src="js/models/backbone-model.js"></script>
+        <script src="js/collections/backbone-collection.js"></script>
+
+        <!-- Forms -->
+        <script src="js/views/forms/userform.js"></script>
 
         <!-- Views -->
         <script src="js/views/backbone-layout.js"></script>
         <script src="js/views/backbone-module.js"></script>
+        <script src="js/views/form.js"></script>
 
         <!-- Router -->
-        <script src="js/backbone-router.js"></script>
+        <script src="js/routers/backbone-router.js"></script>
 
         <script src="js/main.js"></script>
 
